[package]
name = "uysurest"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmlrpc = "0.15.0"
clap = "2.33.3"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.8"
actix-web = { version = "3", features = ["openssl"] }
openssl = { version = "0.10", features = ["v110"] }
actix-web-httpauth = "0.5.0"
env_logger = "0.9.0"
lazy_static = "1.4.0"
once_cell = "1.8.0"

actix-service = "2.0.0"
base64 = "0.13"
futures-util = { version = "0.3.7", default-features = false }

[dev-dependencies]
actix-cors = "0.6.0-beta.2"
actix-rt = "2"